# bazel_haskell_bindist_sandbox

./: BUILD.bazel  WORKSPACE  shell.nix  snapshot.yaml
executables/: Main.hs
